[package]
name = "bmos_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["image", "ttf"]

[dependencies.random-number]
version = "0.1.6"

[dependencies]
soloud = { version = "0.4.0", default-features = false, features = ["openal"] }
openweathermap = "0.2.4"
